# Alura-Space

./: pyproject.toml
app/: urls.py  views.py
setup/: settings.py
templates/: index.html
